2004-07-02  Jesper Harder  <harder@ifa.au.dk>

	* nnrss.el (nnrss-read-group-data): Fix off-by-one error.  From
	Joakim Verona <joakim@verona.se>.

2004-06-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-trim): don't allow a negative
	trim value

2004-01-25  Paul Jarc  <prj@po.cwru.edu>

	* nnmaildir.el (nnmaildir--condcase, nnmaildir--enoent-p):
	New macro and function.
	(nnmaildir--new-number, nnmaildir-request-set-mark): Use them.

2004-06-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-enrich-utf-8-by-mule-ucs): Fix cleaning of
	after-load-alist.

2004-06-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-get-new-news-this-group): Don't
	update info that isn't there.

2004-06-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-inline-render-with-function): Use multibyte
	buffer; decode html source by charset.

	* mm-encode.el (mm-content-transfer-encoding-defaults): Doc fix.

	* mm-util.el (mm-mime-mule-charset-alist): Add the windows-1251
	entry.  From Ilya N. Golubev <gin@mo.msk.ru>.
	(mm-enrich-utf-8-by-mule-ucs): New function run when Mule-UCS is
	loaded under XEmacs.
	(): Don't make duplicated entries in mm-mime-mule-charset-alist.

2004-06-28  Jesper Harder  <harder@ifa.au.dk>

	* nnheader.el (nnheader-max-head-length): Increase to 8192.

2004-06-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-coding-system-p): Return a coding-system.
	(mm-mime-mule-charset-alist): Use shift_jis instead of
	iso-2022-jp-2 for the katakana-jisx0201 mule charset; add new
	entries for the mime charsets iso-2022-jp-3 and shift_jis.
	(mm-coding-system-priorities): Use shift_jis and iso-8859-1
	instead of japanese-shift-jis and iso-latin-1 respectively in
	order to share the default value with both Emacs and XEmacs-mule.
	(mm-mule-charset-to-mime-charset): Make
	mm-coding-system-priorities effective.
	(mm-sort-coding-systems-predicate): Canonicalize coding-systems